--- a/content/themes/masterdev2/resources/assets/styles/common/_variables.scss
+++ b/content/themes/masterdev2/resources/assets/styles/common/_variables.scss
@@ -22,3 +22,7 @@ $color3: #fe9030;
 $theme-colors: (
   primary: #27ae60
 );
+
+/** Bootstrap navbar fix (https://git.io/fADqW) */
+$navbar-dark-toggler-icon-bg: none;
+$navbar-light-toggler-icon-bg: none;
