--- a/content/themes/masterdev2/resources/assets/styles/main.scss
+++ b/content/themes/masterdev2/resources/assets/styles/main.scss
@@ -10,6 +10,7 @@
  * @see https://github.com/webpack-contrib/sass-loader#imports
  */
 // @import "~some-node-module";
+@import "~aos/dist/aos.css";
 
 /** Import theme styles */
 @import "common/global";
