--- a/content/themes/masterdev2/resources/assets/styles/layouts/_sidebar.scss
+++ b/content/themes/masterdev2/resources/assets/styles/layouts/_sidebar.scss
@@ -161,7 +161,8 @@
 					position: absolute;
 					left: 0;
 					top: 0;
-					font-family: FontAwesome, serif;
+					font-family: "Font Awesome 5 Brands", serif;
+					font-weight: 400;
 					content: '\f099';
 					color: #fff;
 					font-size: 35px;
