--- a/content/themes/masterdev2/resources/assets/styles/main.scss
+++ b/content/themes/masterdev2/resources/assets/styles/main.scss
@@ -11,6 +11,7 @@
  */
 // @import "~some-node-module";
 @import "~aos/dist/aos.css";
+@import "~@fortawesome/fontawesome-free/css/all.css";
 
 /** Import theme styles */
 @import "common/global";
