--- a/content/themes/masterdev2/resources/assets/styles/layouts/_blog.scss
+++ b/content/themes/masterdev2/resources/assets/styles/layouts/_blog.scss
@@ -4,579 +4,582 @@ body.search,
 body.single,
 body.page-template-pages,
 body.error404 {
-	position: relative;
-	color: #363636;
+  position: relative;
+  color: #363636;
 }
 
 .blog .current_page_parent,
 .search .current_page_parent,
 .archive .current_page_parent,
 .single-post .current_page_parent {
-	&::before {
-		color: $color2 !important;
-	}
+  &::before {
+    color: $color2 !important;
+  }
 
-	a {
-		color: $color2 !important;
-	}
+  a {
+    color: $color2 !important;
+  }
 }
 
 .blog-content {
-	min-height: 900px;
-	position: relative;
-	padding: 70px 0 70px;
-	
-	.bg-holder {
-		position: relative;
-	}
+  min-height: 900px;
+  position: relative;
+  padding: 70px 0 70px;
 
-	.content-holder {
-		position: relative;
-		z-index: 50;
-		padding: 0 0 50px;
+  .bg-holder {
+    position: relative;
+  }
 
-		h1 {
-			padding: 0 0 40px;
-			color: #2a2a2a;
-			text-transform: uppercase;
-		}
-	}
+  .content-holder {
+    position: relative;
+    z-index: 50;
+    padding: 0 0 50px;
 
-	@include media-breakpoint-only(lg) {
-		.content-holder {
-			.head {
-				h2.first {
-					font-size: 120px;
-				}
+    h1 {
+      padding: 0 0 40px;
+      color: #2a2a2a;
+      text-transform: uppercase;
+    }
+  }
 
-				h2.second {
-					bottom: 18px;
-				}
-			}
-		}
-	}
+  @include media-breakpoint-only(lg) {
+    .content-holder {
+      .head {
+        h2.first {
+          font-size: 120px;
+        }
 
-	@include media-breakpoint-only(md) {
-		.content-holder {
-			.head {
-				h2.first {
-					font-size: 90px;
-				}
+        h2.second {
+          bottom: 18px;
+        }
+      }
+    }
+  }
 
-				h1.second {
-					font-size: 45px;
-					bottom: 16px;
-				}
-			}
-		}
-	}
+  @include media-breakpoint-only(md) {
+    .content-holder {
+      .head {
+        h2.first {
+          font-size: 90px;
+        }
 
-	@include media-breakpoint-down(sm) {
-		padding: 45px 0 45px 0;
+        h1.second {
+          font-size: 45px;
+          bottom: 16px;
+        }
+      }
+    }
+  }
 
-		.content-holder {
-			padding: 0;
+  @include media-breakpoint-down(sm) {
+    padding: 45px 0 45px 0;
 
-			.head {
-				h2.first {
-					display: none;
-				}
+    .content-holder {
+      padding: 0;
 
-				h1.second {
-					font-size: 35px;
-					position: static;
-				}
-			}
+      .head {
+        h2.first {
+          display: none;
+        }
 
-			.blog-desc {
-				width: auto;
-			}
-		}
-	}
+        h1.second {
+          font-size: 35px;
+          position: static;
+        }
+      }
 
-	@include media-breakpoint-down(xs) {
-		h1 {
-			font-size: 35px;
-			padding: 0 0 50px;
-		}
-	}
+      .blog-desc {
+        width: auto;
+      }
+    }
+  }
+
+  @include media-breakpoint-down(xs) {
+    h1 {
+      font-size: 35px;
+      padding: 0 0 50px;
+    }
+  }
 }
 
 .blogpost-row {
-	padding: 15px;
-	margin-top: 30px;
-	background: #fff;
-	box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-	border-radius: 10px;
-	
-	&:nth-of-type(1) {
-		margin-top: 0;
-	}
+  padding: 15px;
+  margin-top: 30px;
+  background: #fff;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
 
-	.blog-summary {
-		h2,
-		h3,
-		h4,
-		h5,
-		h6 {
-			display: none;
-		}
-	}
+  &:nth-of-type(1) {
+    margin-top: 0;
+  }
 
-	.img-cont {
-		text-align: center;
+  .blog-summary {
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      display: none;
+    }
+  }
 
-		img {
-			max-width: 100% !important;
-			height: auto !important;
-		}
-	}
+  .img-cont {
+    text-align: center;
 
-	.text-cont {
-		text-align: left;
-		padding: 0;
-		position: relative;
-	}
+    img {
+      max-width: 100% !important;
+      height: auto !important;
+    }
+  }
 
-	h2,
-	h2 a {
-		font-size: 25px;
-		text-transform: none;
-		padding: 0 0 8px;
-		text-align: left;
-		line-height: 1.3;
-		font-weight: bold;
-		margin: 0;
-		font-family: $heading-font;
-		color: #363636;
-		letter-spacing: 0;
+  .text-cont {
+    text-align: left;
+    padding: 0;
+    position: relative;
+  }
 
-		&:hover {
-			color: darken($color2, 5%);
-		}
-	}
+  h2,
+  h2 a {
+    font-size: 25px;
+    text-transform: none;
+    padding: 0 0 8px;
+    text-align: left;
+    line-height: 1.3;
+    font-weight: bold;
+    margin: 0;
+    font-family: $heading-font;
+    color: #363636;
+    letter-spacing: 0;
 
-	h3 {
-		font-size: 20px;
-		font-weight: bold;
-		padding: 0 0 8px;
-		display: none;
-	}
+    &:hover {
+      color: darken($color2, 5%);
+    }
+  }
 
-	h4 {
-		padding: 0 0 15px;
-		font-weight: bold;
-		font-size: 18px;
-		font-family: $base-font;
-	}
+  h3 {
+    font-size: 20px;
+    font-weight: bold;
+    padding: 0 0 8px;
+    display: none;
+  }
 
-	h5 {
-		padding: 0 0 15px;
-	    font-weight: bold;
-	    font-size: 16px;
-	    font-family: $base-font;
-	}
+  h4 {
+    padding: 0 0 15px;
+    font-weight: bold;
+    font-size: 18px;
+    font-family: $base-font;
+  }
 
-	p {
-		line-height: 30px;
-	}
+  h5 {
+    padding: 0 0 15px;
+    font-weight: bold;
+    font-size: 16px;
+    font-family: $base-font;
+  }
 
-	.read-more-btn {
-		text-align: right;
+  p {
+    line-height: 30px;
+  }
 
-		.read-more {
-			width: 137px;
-			height: 47px;
-			padding: 0;
-			text-align: center;
-			float: right;
-			font-size: 18px;
-			line-height: 47px;
-			text-transform: capitalize;
-			color: #fff;
-			border-radius: 7px;
-			background: #333;
-			
-			&:hover {
-				background: $color2;
-			}
-		}
-	}
+  .read-more-btn {
+    text-align: right;
 
-	.date-author {
-		margin-bottom: 15px;
-		width: 100%;
+    .read-more {
+      width: 137px;
+      height: 47px;
+      padding: 0;
+      text-align: center;
+      float: right;
+      font-size: 18px;
+      line-height: 47px;
+      text-transform: capitalize;
+      color: #fff;
+      border-radius: 7px;
+      background: #333;
 
-		span {
-			display: inline-block;
-			font-size: 14px;
-			text-align: left;
-			color: #363636;
-			
-			svg {
-				padding: 0 7px 0 0;
-				font-size: 20px;
-				position: relative;
-				top: 3px;
-			}
-		}
+      &:hover {
+        background: $color2;
+      }
+    }
+  }
 
-		.date {
-			margin: 0 0 0 35px;
-		}
-	}
+  .date-author {
+    margin-bottom: 15px;
+    width: 100%;
 
-	.no-img {
-		float: none !important;
-		width: auto !important;
-		max-width: 100% !important;
-		flex: 0 0 100%;
-		-webkit-box-flex: 0;
-    	-ms-flex: 0 0 100%;
-	}
+    span {
+      display: inline-block;
+      font-size: 14px;
+      text-align: left;
+      color: #363636;
 
-	figure.wp-caption {
-		margin-top: 20px;
-		margin-bottom: 20px;
-	}
+      svg,
+      .fas,
+      .fab {
+        padding: 0 7px 0 0;
+        font-size: 20px;
+        position: relative;
+        top: 3px;
+      }
+    }
 
-	figure.wp-caption.alignleft,
-	figure.wp-caption.alignnone,
-	figure.wp-caption.alignright {
-		margin-top: 0;
-	}
+    .date {
+      margin: 0 0 0 35px;
+    }
+  }
 
-	ul {
-		padding: 0 0 0 40px;
+  .no-img {
+    float: none !important;
+    width: auto !important;
+    max-width: 100% !important;
+    flex: 0 0 100%;
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 100%;
+  }
 
-		li {
-			line-height: 30px;
-			padding: 0 0 15px;
+  figure.wp-caption {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
 
-			ul {
-				padding-top: 15px;
-				list-style-type: circle;
+  figure.wp-caption.alignleft,
+  figure.wp-caption.alignnone,
+  figure.wp-caption.alignright {
+    margin-top: 0;
+  }
 
-				li {
-					&:last-child {
-						padding-bottom: 0;
-					}
-				}
-			}
-		}
-	}
+  ul {
+    padding: 0 0 0 40px;
 
-	ol {
-		padding: 0 0 0 20px;
-		list-style-type: upper-roman;
+    li {
+      line-height: 30px;
+      padding: 0 0 15px;
 
-		li {
-			line-height: 30px;
-			padding: 0 0 15px;
-			
-			ul {
-				padding: 15px 0 0 40px;
-			}
-		}
-	}
+      ul {
+        padding-top: 15px;
+        list-style-type: circle;
 
-	ol.list-letter,
-	ol li ol {
-		padding: 15px 0 0 30px;
-	}
+        li {
+          &:last-child {
+            padding-bottom: 0;
+          }
+        }
+      }
+    }
+  }
 
-	ol.list-letter,
-	ol li ol li {
-		list-style-type: lower-alpha;
+  ol {
+    padding: 0 0 0 20px;
+    list-style-type: upper-roman;
 
-		li:last-child {
-			padding-bottom: 0;
-		}
+    li {
+      line-height: 30px;
+      padding: 0 0 15px;
 
-		ul {
-			padding-top: 15px;
+      ul {
+        padding: 15px 0 0 40px;
+      }
+    }
+  }
 
-			li:last-child {
-				padding-bottom: 0;
-			}
-		}
-	}
+  ol.list-letter,
+  ol li ol {
+    padding: 15px 0 0 30px;
+  }
 
-	ol.list-number,
-	ol li ol li ol {
-		padding: 15px 0 0 40px;
-		list-style-type: decimal;
-	}
+  ol.list-letter,
+  ol li ol li {
+    list-style-type: lower-alpha;
 
-	ol ul {
-		list-style-type: disc;
-		
-		li {
-			ul {
-				list-style-type: circle;
-			}
-		}
-	}
+    li:last-child {
+      padding-bottom: 0;
+    }
 
-	@include media-breakpoint-down(sm) {
-		.img-cont {
-			float: none;
-			width: auto;
-			margin: 0 0 30px;
-			text-align: center;
-		}
+    ul {
+      padding-top: 15px;
 
-		.text-cont {
-			float: none;
-			width: auto;
+      li:last-child {
+        padding-bottom: 0;
+      }
+    }
+  }
 
-			.date-author {
-				span {
-					display: block;
-					float: none !important;
-					font-size: 15px;
-				}
+  ol.list-number,
+  ol li ol li ol {
+    padding: 15px 0 0 40px;
+    list-style-type: decimal;
+  }
 
-				.date {
-					margin: 10px 0 0;
-				}
-			}
+  ol ul {
+    list-style-type: disc;
 
-			.wp-caption.alignleft,
-			.wp-caption.alignright {
-				float: none;
-				margin: 15px auto;
-				width: 100% !important;
-				text-align: center;
-				max-width: none !important;
+    li {
+      ul {
+        list-style-type: circle;
+      }
+    }
+  }
 
-				img {
-					width: 330px !important;
-				}
-			}
-		}
-	}
+  @include media-breakpoint-down(sm) {
+    .img-cont {
+      float: none;
+      width: auto;
+      margin: 0 0 30px;
+      text-align: center;
+    }
 
-	@include media-breakpoint-down(xs) {
-		.text-cont {
-			.wp-caption.alignleft,
-			.wp-caption.alignright {
-				max-width: 100% !important;
-				width: 100% !important;
-				text-align: center;
+    .text-cont {
+      float: none;
+      width: auto;
 
-				img {
-					max-width: 100%;
-					width: 200px !important;
-				}
-			}
-		}
-	}
+      .date-author {
+        span {
+          display: block;
+          float: none !important;
+          font-size: 15px;
+        }
+
+        .date {
+          margin: 10px 0 0;
+        }
+      }
+
+      .wp-caption.alignleft,
+      .wp-caption.alignright {
+        float: none;
+        margin: 15px auto;
+        width: 100% !important;
+        text-align: center;
+        max-width: none !important;
+
+        img {
+          width: 330px !important;
+        }
+      }
+    }
+  }
+
+  @include media-breakpoint-down(xs) {
+    .text-cont {
+      .wp-caption.alignleft,
+      .wp-caption.alignright {
+        max-width: 100% !important;
+        width: 100% !important;
+        text-align: center;
+
+        img {
+          max-width: 100%;
+          width: 200px !important;
+        }
+      }
+    }
+  }
 }
 
 .posts-navigation {
-	width: 100%;
-	padding: 0;
-    margin: 30px 0 0;
-    border-top: 0;
+  width: 100%;
+  padding: 0;
+  margin: 30px 0 0;
+  border-top: 0;
 
-    h2 {
-		display: none;
-	}
+  h2 {
+    display: none;
+  }
 
-	.nav-links {
-		display: block;
+  .nav-links {
+    display: block;
 
-		a,
-		a:focus,
-		a:active {
-			font-size: 16px;
-			color: #4d4d4d;
-			position: relative;
-			display: inline-block;
-			text-transform: capitalize;
-		}
+    a,
+    a:focus,
+    a:active {
+      font-size: 16px;
+      color: #4d4d4d;
+      position: relative;
+      display: inline-block;
+      text-transform: capitalize;
+    }
 
-		a:hover {
-			color: $color2;
-		}
+    a:hover {
+      color: $color2;
+    }
 
-		a::before {
-			position: absolute;
-			left: 0;
-			top: 5px;
-			font-family: FontAwesome, serif;
-			font-size: 18px;
-			content: normal;
-			line-height: 13px;
-		}
+    a::before {
+      position: absolute;
+      left: 0;
+      top: 5px;
+      font-family: "Font Awesome 5 Free", serif;
+      font-weight: 600;
+      font-size: 18px;
+      content: normal;
+      line-height: 13px;
+    }
 
-		.nav-next {
-			float: right;
+    .nav-next {
+      float: right;
 
-			a {
-				text-align: right;
-				padding: 0 12px 0 0;
+      a {
+        text-align: right;
+        padding: 0 12px 0 0;
 
-				&::before {
-					content: '\f105';
-					left: auto;
-					right: 0;
-				}
-			}
-		}
+        &::before {
+          content: '\f105';
+          left: auto;
+          right: 0;
+        }
+      }
+    }
 
-		.nav-previous {
-			float: left;
+    .nav-previous {
+      float: left;
 
-			 a {
-				text-align: left;
-				padding: 0 0 0 12px;
+      a {
+        text-align: left;
+        padding: 0 0 0 12px;
 
-				&::before {
-					content: '\f104';
-				}
-			}
-		}
-	}
+        &::before {
+          content: '\f104';
+        }
+      }
+    }
+  }
 }
 
 .blogpost-row.blog-detail {
-	padding: 15px;
-	background: #fff;
-	border-radius: 0;
-	box-shadow: none;
-	border: 1px solid #e7e8e9;
+  padding: 15px;
+  background: #fff;
+  border-radius: 0;
+  box-shadow: none;
+  border: 1px solid #e7e8e9;
 
-	.img-cont {
-		text-align: center;
-	}
+  .img-cont {
+    text-align: center;
+  }
 
-	.text-cont {
-		background: none;
-		border: 0;
-		border-radius: 0;
-		padding: 0;
-		width: auto;
-		float: none;
-		
-		h2 {
-			font-size: 23px;
-		    text-transform: none;
-		    padding: 0 0 5px;
-		    letter-spacing: 0;
-		    color: $base-color;
-		    font-family: $base-font;
-		}
+  .text-cont {
+    background: none;
+    border: 0;
+    border-radius: 0;
+    padding: 0;
+    width: auto;
+    float: none;
 
-		h3,
-		h4,
-		h5,
-		h6 {
-			display: block !important;
-		}
+    h2 {
+      font-size: 23px;
+      text-transform: none;
+      padding: 0 0 5px;
+      letter-spacing: 0;
+      color: $base-color;
+      font-family: $base-font;
+    }
 
-		h3 {
-			color: $base-color;
-		}
+    h3,
+    h4,
+    h5,
+    h6 {
+      display: block !important;
+    }
 
-		p {
-			color: $base-color;
-		}
+    h3 {
+      color: $base-color;
+    }
 
-		.date-author {
-			margin: 0 0 30px;
+    p {
+      color: $base-color;
+    }
 
-			span {
-				color: $base-color;
-			}
-		}
+    .date-author {
+      margin: 0 0 30px;
 
-		.wp-caption-text {
-			color: $base-color;
-			word-wrap: break-word;
-			padding: 5px 0 0;
-			font-size: 13px;
-		}
+      span {
+        color: $base-color;
+      }
+    }
 
-		ul,
-		ol {
-			li {
-				color: $base-color;
-			}
-		}
-	}
+    .wp-caption-text {
+      color: $base-color;
+      word-wrap: break-word;
+      padding: 5px 0 0;
+      font-size: 13px;
+    }
+
+    ul,
+    ol {
+      li {
+        color: $base-color;
+      }
+    }
+  }
 }
 
 span.wpcf7-not-valid-tip {
-	padding: 5px;
-	color: #f00;
-	text-align: left;
-	margin: 1px 0 0;
-	background: #fff;
-	font-weight: 500;
+  padding: 5px;
+  color: #f00;
+  text-align: left;
+  margin: 1px 0 0;
+  background: #fff;
+  font-weight: 500;
 }
 
 div.wpcf7-validation-errors,
 div.wpcf7-mail-sent-ng {
-	border: 2px solid #f00;
-	color: #f00;
-	text-align: center;
-	background: #fff;
+  border: 2px solid #f00;
+  color: #f00;
+  text-align: center;
+  background: #fff;
 }
 
 div.wpcf7-mail-sent-ok {
-	border: 2px solid #32dc5d;
-	color: #32dc5d;
-	text-align: center;
-	background: #fff;
+  border: 2px solid #32dc5d;
+  color: #32dc5d;
+  text-align: center;
+  background: #fff;
 }
 
 div.wpcf7 img.ajax-loader {
-	display: block;
+  display: block;
 }
 
 .alert-warning {
-	background: #f7f7f7;
-	box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-	border: 0;
-	color: #333;
+  background: #f7f7f7;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  border: 0;
+  color: #333;
 }
 
 .not-found {
-	padding: 150px 0 80px 0;
-	min-height: 700px;
+  padding: 150px 0 80px 0;
+  min-height: 700px;
 
-	h1 {
-		padding: 0 0 40px;
-		text-align: center;
-		text-transform: uppercase;
-		color: #2a2a2a;
-	}
+  h1 {
+    padding: 0 0 40px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #2a2a2a;
+  }
 
-	.alert-warning {
-		color: $base-color;
-	}
+  .alert-warning {
+    color: $base-color;
+  }
 
-	@include media-breakpoint-down(sm) {
-		padding: 45px 0;
-	}
+  @include media-breakpoint-down(sm) {
+    padding: 45px 0;
+  }
 }
 
 .search-result {
-	min-height: 710px;
+  min-height: 710px;
 
-	.content-holder > h2 {
-		text-align: center;
-		padding: 0 0 50px;
-		color: $base-color;
-	}
+  .content-holder > h2 {
+    text-align: center;
+    padding: 0 0 50px;
+    color: $base-color;
+  }
 
-	.status-publish {
-		margin: 30px 0 0;
-	    
-		&:nth-of-type(1) {
-			margin-top: 0;
-		}
-	}
+  .status-publish {
+    margin: 30px 0 0;
+
+    &:nth-of-type(1) {
+      margin-top: 0;
+    }
+  }
 }
