--- a/content/themes/masterdev2/resources/assets/styles/layouts/_footer.scss
+++ b/content/themes/masterdev2/resources/assets/styles/layouts/_footer.scss
@@ -1,142 +1,149 @@
 footer {
-		padding: 0;
-		overflow-x: hidden;
-		text-align: center;
-		background: $bg2;
-		
-		p.copyright {
-				font-size: 15px;
-				color: #fff;
-				line-height: 1.3;
-				padding: 20px 0 !important;
-				
-				em {
-					font-style: normal;
-					position: relative;
-				}
+  padding: 0;
+  overflow-x: hidden;
+  text-align: center;
+  background: $bg2;
 
-				svg {
-					font-size: 5px;
-				    vertical-align: middle;
-				    position: relative;
-				    top: -2px;
-				    margin: 0 2px;
-				}
+  p.copyright {
+    font-size: 15px;
+    color: #fff;
+    line-height: 1.3;
+    padding: 20px 0 !important;
 
-				a {
-					text-decoration: none;
-					color: #fff;
-					transition: color 0.8s ease;
-					
-					&:hover {
-						color: $color2;
-					}
-				}
-				
-				span {
-						background: url(../images/copyright.png) no-repeat 0 0;
-						background-size: 16px auto;
-						padding: 3px 0 3px 26px;
-						display: inline-block;
-				}
+    em {
+      font-style: normal;
+      position: relative;
+    }
 
-				@include media-breakpoint-down(sm) {
-						line-height: 20px;
-						padding: 0 !important;
-						text-align: center;
+    svg,
+    .fab,
+    .fas {
+      font-size: 5px;
+      vertical-align: middle;
+      position: relative;
+      top: -2px;
+      margin: 0 2px;
+    }
 
-						span {
-							background-size: 16px auto;
-							padding: 5px 0 5px 22px;
-							background-position: 0 3px;
-							margin-left: 0;
-						}
-				}
+    a {
+      text-decoration: none;
+      color: #fff;
+      transition: color 0.8s ease;
 
-				@include media-breakpoint-down(xs) {
-						span {
-							background-size: 11px auto;
-							padding: 0 0 0 20px;
-						}
-				}
-		}
+      &:hover {
+        color: $color2;
+      }
+    }
 
-		@include media-breakpoint-down(sm) {
-			p.copyright {
-				padding: 15px !important;
-				font-size: 13px;
-			}
-		}
+    span {
+      background: url(../images/copyright.png) no-repeat 0 0;
+      background-size: 16px auto;
+      padding: 3px 0 3px 26px;
+      display: inline-block;
+    }
+
+    @include media-breakpoint-down(sm) {
+      line-height: 20px;
+      padding: 0 !important;
+      text-align: center;
+
+      span {
+        background-size: 16px auto;
+        padding: 5px 0 5px 22px;
+        background-position: 0 3px;
+        margin-left: 0;
+      }
+    }
+
+    @include media-breakpoint-down(xs) {
+      span {
+        background-size: 11px auto;
+        padding: 0 0 0 20px;
+      }
+    }
+  }
+
+  @include media-breakpoint-down(sm) {
+    p.copyright {
+      padding: 15px !important;
+      font-size: 13px;
+    }
+  }
 }
 
 .footer-social {
-		margin: 0;
-		padding: 0;
+  margin: 0;
+  padding: 0;
 
-		li {
-			display: inline-block;
-			vertical-align: top;
-			margin: 0 20px 0 0;
-			padding: 0;
-			list-style-type: none;
+  li {
+    display: inline-block;
+    vertical-align: top;
+    margin: 0 20px 0 0;
+    padding: 0;
+    list-style-type: none;
 
-			a {
-				display: inline-block;
-				color: #fff;
-				border-radius: 7px;
-				text-align: center;
-				width: 64px;
-				height: 64px;
-				line-height: 74px;
-				background: $bg1;
-				transition: border-radius 0.5s;
-				
-				svg {
-					color: #fff;
-					font-size: 32px;
-					font-style: normal;
-					transition: transform 0.8s ease;
-				}
-			}
+    a {
+      display: inline-block;
+      color: #fff;
+      border-radius: 7px;
+      text-align: center;
+      width: 64px;
+      height: 64px;
+      line-height: 74px;
+      background: $bg1;
+      transition: border-radius 0.5s;
 
-			&:hover {
-				a {
-					border-radius: 50%;
-				}
-			}
-		}
+      svg,
+      em {
+        color: #fff;
+        font-size: 32px;
+        font-style: normal;
+        transition: transform 0.8s ease;
+      }
+    }
 
-		@include media-breakpoint-down(sm) {
-			text-align: center;
+    &:hover {
+      a {
+        border-radius: 50%;
+      }
+    }
+  }
 
-			li {
-				margin: 0 15px;
+  @include media-breakpoint-down(sm) {
+    text-align: center;
 
-				a {
-					width: 55px;
-				    height: 55px;
-				    line-height: 62px;
+    li {
+      margin: 0 15px;
 
-				    svg {
-				    	font-size: 30px;
-				    }
-				}
-			}
-		}
+      a {
+        width: 55px;
+        height: 55px;
+        line-height: 62px;
 
-		@include media-breakpoint-down(xs) {
-			li {
-				margin: 0 10px;
+        svg,
+        .fab,
+        .fas {
+          font-size: 30px;
+        }
+      }
+    }
+  }
 
-				a {
-					width: 45px;
-					height: 45px;
-					line-height: 46px;
-					
-					svg {
-						font-size: 20px;
-					}
-				}
-			}
-		}
+  @include media-breakpoint-down(xs) {
+    li {
+      margin: 0 10px;
+
+      a {
+        width: 45px;
+        height: 45px;
+        line-height: 46px;
+
+        svg,
+        .fas,
+        .fab {
+          font-size: 20px;
+        }
+      }
+    }
+  }
 }
