--- a/content/themes/masterdev2/resources/assets/styles/components/_comments.scss
+++ b/content/themes/masterdev2/resources/assets/styles/components/_comments.scss
@@ -174,6 +174,7 @@
 			
 			#wp-comment-cookies-consent {
 				margin-right: 5px;
+				display: inline-block;
 			}
 
 			textarea,
@@ -383,6 +384,7 @@
 #commentform label.error,
 #comments .comment-respond form label {
 	font-size: 16px;
+	display: inline-block;
 }
 
 #commentform div.error,
