--- a/content/themes/masterdev2/resources/assets/styles/layouts/_blog.scss
+++ b/content/themes/masterdev2/resources/assets/styles/layouts/_blog.scss
@@ -559,6 +559,7 @@ div.wpcf7 img.ajax-loader {
 
   .alert-warning {
     color: $base-color;
+    text-align: center;
   }
 
   @include media-breakpoint-down(sm) {
