--- a/content/themes/masterdev2/resources/assets/styles/layouts/_blog.scss
+++ b/content/themes/masterdev2/resources/assets/styles/layouts/_blog.scss
@@ -311,11 +311,11 @@ body.error404 {
   }
 
   ol ul {
-    list-style-type: disc;
+    list-style-type: unset;
 
     li {
       ul {
-        list-style-type: circle;
+        list-style-type: unset;
       }
     }
   }
