--- a/content/themes/mary-ann/resources/assets/styles/layouts/_book.scss
+++ b/content/themes/mary-ann/resources/assets/styles/layouts/_book.scss
@@ -68,15 +68,54 @@
 		}
 	}
 
+	@include media-breakpoint-down(lg) {
+		padding: 70px 0 95px;
+		
+		#BookCarousel {
+			.carousel-indicators {
+				margin-right: 11%;
+				margin-left: 11%;
+				bottom: -40px;
+			}
+		}
+	}
+
+	@include media-breakpoint-down(md) {
+		#BookCarousel {
+			.carousel-inner {
+				.text-cont-2 {
+					padding: 0;
+				}
+			}
+
+			.carousel-indicators {
+				justify-content: center;
+			}
+
+			.img-cont {
+				margin: 0 auto 30px;
+				width: 350px;
+				position: static;
+			}
+
+			.text-cont {
+				text-align: center;
+			}
+		}
+	}
+
 	@include media-breakpoint-down(sm) {
-		.img-cont {
-			margin: 0 auto 30px;
-    		width: 280px;
+		#BookCarousel {
+			.img-cont {
+				margin: 0 auto 30px;
+				width: 280px;
+				position: static;
+			}
 		}
 	}
 
 	@include media-breakpoint-down(xs) {
-		padding: 50px 0 35px;
+		padding: 50px 0 75px;
 
 		.img-cont {
 			width: 230px;
